started working on the box products

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -15,7 +15,8 @@
             ><img
               src="../../../assets/img/jpack-logo.jpg"
               class="img-fluid flex-center"
-           alt=""/></a>
+              alt=""
+          /></a>
         </div>
       </li>
       <!--/. Logo -->
@@ -64,15 +65,33 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li routerLink="anti-static-bags"><a mdbWavesEffect>Anti Static Bags</a></li>
-                  <li routerLink="bubble-pouches-bags"><a mdbWavesEffect>Bubble Pouches</a></li>
-                  <li routerLink="clear-poly-bags"><a mdbWavesEffect>Clear Poly Bags</a></li>
-                  <li routerLink="clear-reclosable-bags"><a mdbWavesEffect>Clear Reclosable Bags</a></li>
-                  <li routerLink="poly-bag-sealer"><a mdbWavesEffect>Poly Bag Sealer</a></li>
-                  <li routerLink="polypropylene-bags"><a mdbWavesEffect>Polypropylene Bags</a></li>
-                  <li routerLink="poly-tubing"><a mdbWavesEffect>Poly Tubing</a></li>
-                  <li routerLink="static-shielding-bags"><a mdbWavesEffect>Static Shielding Bags</a></li>
-                  <li routerLink="vacuum-bags"><a mdbWavesEffect>Vacuum Bags</a></li>
+                  <li routerLink="anti-static-bags">
+                    <a mdbWavesEffect>Anti Static Bags</a>
+                  </li>
+                  <li routerLink="bubble-pouches-bags">
+                    <a mdbWavesEffect>Bubble Pouches</a>
+                  </li>
+                  <li routerLink="clear-poly-bags">
+                    <a mdbWavesEffect>Clear Poly Bags</a>
+                  </li>
+                  <li routerLink="clear-reclosable-bags">
+                    <a mdbWavesEffect>Clear Reclosable Bags</a>
+                  </li>
+                  <li routerLink="poly-bag-sealer">
+                    <a mdbWavesEffect>Poly Bag Sealer</a>
+                  </li>
+                  <li routerLink="polypropylene-bags">
+                    <a mdbWavesEffect>Polypropylene Bags</a>
+                  </li>
+                  <li routerLink="poly-tubing">
+                    <a mdbWavesEffect>Poly Tubing</a>
+                  </li>
+                  <li routerLink="static-shielding-bags">
+                    <a mdbWavesEffect>Static Shielding Bags</a>
+                  </li>
+                  <li routerLink="vacuum-bags">
+                    <a mdbWavesEffect>Vacuum Bags</a>
+                  </li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
@@ -83,15 +102,27 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Box Stapler & Staples</a></li>
-                  <li><a href="#" mdbWavesEffect>Corrugated Boxes</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Corrugated Bulk Containers</a>
+                  <li routerLink="box-stapler-staples">
+                    <a mdbWavesEffect>Box Stapler & Staples</a>
                   </li>
-                  <li><a href="#" mdbWavesEffect>Corrugated Pads</a></li>
-                  <li><a href="#" mdbWavesEffect>Corrugated Mailers</a></li>
-                  <li><a href="#" mdbWavesEffect>Easy Fold Boxes</a></li>
-                  <li><a href="#" mdbWavesEffect>Mailing Tubes</a></li>
+                  <li routerLink="corrugated-boxes">
+                    <a mdbWavesEffect>Corrugated Boxes</a>
+                  </li>
+                  <li routerLink="corrugated-bulk-containers">
+                    <a mdbWavesEffect>Corrugated Bulk Containers</a>
+                  </li>
+                  <li routerLink="corrugated-pads">
+                    <a mdbWavesEffect>Corrugated Pads</a>
+                  </li>
+                  <li routerLink="corrugated-mailers">
+                    <a mdbWavesEffect>Corrugated Mailers</a>
+                  </li>
+                  <li routerLink="easy-fold-boxes">
+                    <a mdbWavesEffect>Easy Fold Boxes</a>
+                  </li>
+                  <li routerLink="mailing-tubes">
+                    <a mdbWavesEffect>Mailing Tubes</a>
+                  </li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
@@ -273,7 +304,7 @@
       <ul class="nav navbar-nav nav-flex-icons my-auto ml-auto ie-double-nav">
         <li routerLink="/" class="nav-item">
           <a class="nav-link waves-light" mdbWavesEffect
-          ><i class="fas fa-home"></i>
+            ><i class="fas fa-home"></i>
             <span class="clearfix d-none d-sm-inline-block">home</span></a
           >
         </li>
@@ -297,13 +328,15 @@
         </li>
         <li routerLink="order" class="nav-item">
           <a class="nav-link waves-light" mdbWavesEffect
-          ><i class="fas fa-wifi"></i>
-            <span class="clearfix d-none d-sm-inline-block">Order Online</span></a
+            ><i class="fas fa-wifi"></i>
+            <span class="clearfix d-none d-sm-inline-block"
+              >Order Online</span
+            ></a
           >
         </li>
         <li routerLink="quotation" class="nav-item">
           <a class="nav-link waves-light" mdbWavesEffect
-          ><i class="fas fa-comment-dollar"></i>
+            ><i class="fas fa-comment-dollar"></i>
             <span class="clearfix d-none d-sm-inline-block">Quotation</span></a
           >
         </li>
