--- a/src/app/products/corrugated-boxes/box-stapler-staples/box-stapler-staples.component.html
+++ b/src/app/products/corrugated-boxes/box-stapler-staples/box-stapler-staples.component.html
@@ -1,3 +1,178 @@
-<p>
-  box-stapler-staples works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/box-stapler.jpg"
+            alt="Box Stapler"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/box-stapler.jpg"
+                    alt="Box Stapler"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">BOX STAPLER, STAPLES AND STAPLE REMOVER</h3>
+          <p class="card-text lead">
+            Box staplers ensure fast and secure lid closing.
+          </p>
+          <p class="card-text lead">
+            ¾” Staples used for Double Wall Application.
+          </p>
+          <p class="card-text lead">Staple Remover makes it easier to unfuck yourself :)</p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <h3 class="lead mt-2">CARTON STAPLER</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-right: 2px;">STAPLER TYPE & USAGE</th>
+          <th scope="col" style="padding-left: 1px">STAPLE CROWN</th>
+          <th scope="col" style="padding-right: 2px">STAPLE LEG</th>
+          <th scope="col" style="padding-right: 2px">STAPLES CAPACITY</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr *ngFor="let box of boxStapler" style="text-align: center;">
+          <td class="item align-middle">{{ box.productNumber }}</td>
+          <td class="item align-middle">{{ box.staplerTypeUsage }}</td>
+          <td class="item align-middle">{{ box.staplerCrown }}</td>
+          <td class="item align-middle">{{ box.stapleLeg }}</td>
+          <td class="item align-middle">{{ box.staplesCapacity }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+      <!--TABLE-->
+      <h3 class="lead">STAPLES</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-right: 2px;">DESCRIPTION</th>
+          <th scope="col" style="padding-right: 2px;">SIZE CROWN & LEGS</th>
+          <th scope="col" style="padding-left: 1px">NUMBER / CASE</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr
+          *ngFor="let box of staples"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ box.productNumber }}</td>
+          <td class="item align-middle">{{ box.description }}</td>
+          <td class="item align-middle">{{ box.sizeCrownLeg }}</td>
+          <td class="item align-middle">{{ box.numberPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+      <!--TABLE-->
+      <h3 class="lead">STAPLE REMOVER</h3>
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-right: 2px;">DESCRIPTION</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr
+          *ngFor="let box of stapleRemover"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ box.productNumber }}</td>
+          <td class="item align-middle">{{ box.description }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
