--- a/src/app/products/corrugated-boxes/mailing-tubes/mailing-tubes.component.html
+++ b/src/app/products/corrugated-boxes/mailing-tubes/mailing-tubes.component.html
@@ -1,3 +1,145 @@
-<p>
-  mailing-tubes works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/mailing-tube.jpg"
+            alt="Mailing Tube"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/mailing-tube.jpg"
+                    alt="Mailing Tube"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">CORRUGATED BOXES</h3>
+          <p class="card-text lead">
+            Prevent your packages from being damaged with these durable (200-Pound test), user-friendly boxes.
+          </p>
+          <p class="card-text lead">
+            Countless sizes to choose from and custom-sized boxes available!
+          </p>
+          <p class="card-text lead">
+            Light weight & durable
+          </p>
+          <p class="card-text lead">
+            Box Stapler and Staples available.
+          </p>
+          <p class="card-text lead">
+            Customized Sizes, Prints & Designs Available!
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-left: 1px">INSIDE DIM</th>
+          <th scope="col" style="padding-left: 1px">OUTSIDE DIM</th>
+          <th scope="col" style="padding-left: 1px">No./BUNDLE</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr *ngFor="let tube of mailingTube" style="text-align: center;">
+          <td class="item align-middle">{{ tube.productNumber }}</td>
+          <td class="item align-middle">{{ tube.insideDim }}</td>
+          <td class="item align-middle">{{ tube.outsideDim }}</td>
+          <td class="item align-middle">{{ tube.numberPerBundle }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+      <!--TABLE-->
+      <h3 class="lead">STAPLE REMOVER</h3>
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-left: 1px">DESCRIPTION</th>
+          <th scope="col" style="padding-left: 1px">No./BAG</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr *ngFor="let tube of mailingCap" style="text-align: center;">
+          <td class="item align-middle">{{ tube.productNumber }}</td>
+          <td class="item align-middle">{{ tube.description }}</td>
+          <td class="item align-middle">{{ tube.numberPerBag }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+    </div>
+  </div>
+</main>
